--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_svg: ^2.0.7
   provider: ^6.0.5
   uuid: ^3.0.6
+  intl: ^0.18.1
+  logger: ^2.0.1
+  universal_io: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -78,17 +81,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Outfit
+      fonts:
+        - asset: assets/fonts/Outfit/static/Outfit-Regular.ttf
+        - asset: assets/fonts/Outfit/static/Outfit-Medium.ttf
+        - asset: assets/fonts/Outfit/static/Outfit-SemiBold.ttf
+        - asset: assets/fonts/Outfit/static/Outfit-Light.ttf
+        - asset: assets/fonts/Outfit/static/Outfit-Bold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
